--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.588168Z",
      "start_time": "2024-07-03T14:10:29.446448Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +67,10 @@
     "\n",
     "\n",
     "def group_by_column_and_aggregate_values(df, column, aggregation_func):\n",
-    "    column_values = df.groupby([\"dataset\", \"measure\"])[column]\n",
+    "    try:\n",
+    "        column_values = df.groupby([\"dataset\", \"measure\"])[column]\n",
+    "    except:\n",
+    "        column_values = df.groupby([\"dataset\", \"function\"])[column]\n",
     "    aggregated_values = getattr(column_values, aggregation_func)()\n",
     "\n",
     "    data_dict = defaultdict(dict)\n",
@@ -89,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,12 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_regex(expr_list, path):\n",
     "    for expr in expr_list:\n",
+    "        expr = expr.replace(\"'\", r\"\\x27\")\n",
     "        expr_ = '\\'' + expr + '\\''\n",
     "        path_ = '\"' + path + '\"'\n",
     "        !perl -pwi -e {expr_} {path_}\n",
@@ -178,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,6 +467,16 @@
     "    #     \"latex_coloring_axis\": 1,\n",
     "    #     \"latex_coloring_selection\": [\"DISCO\", \"DBCV\", \"DCSI\", \"S_DBW\", \"DSI\", \"SILHOUETTE\", \"DUNN\"],\n",
     "    # },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_runtimes = {\n",
     "    # Runtimes\n",
     "    \"real_world_colored_row_wise_time\": {\n",
     "        \"path\": \"results/real_world_standardized/\",\n",
@@ -516,21 +539,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.utils.cluster_algorithms import CLUSTER_ALGORITHMS, CLUSTER_ABBREV\n",
+    "\n",
+    "config_clusterings = {\n",
+    "    # Clusterings\n",
+    "    \"density_standardized_colored_row_wise_clusterings\": {\n",
+    "        \"path\": \"clustering_results2/density_standardized/\",\n",
+    "        \"latex_path\": \"latex/density_standardized_clusterings.tex\",\n",
+    "        \"dataset_names\": [dataset.name for dataset in DensityDatasets],\n",
+    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "        \"metrics\": list(CLUSTER_ALGORITHMS.keys()),\n",
+    "        \"metric_abbrev\": CLUSTER_ABBREV,\n",
+    "        # \"lower_is_better\": METRICS,\n",
+    "        \"selection\": [\"value\"],\n",
+    "        \"caption\": \"DISCO values on different Clusterings\",\n",
+    "        \"categories\": [],\n",
+    "        \"latex_coloring_axis\": 1,\n",
+    "        # \"latex_coloring_selection\": RUNTIME_METRICS,\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated: `latex/real_world_experiments_standardized_process_time.tex`\n",
-      "Generated: `latex/real_world_experiments_standardized_time.tex`\n",
-      "Generated: `latex/real_world_experiments_standardized.tex`\n",
       "Generated: `latex/real_world_experiments.tex`\n",
+      "Generated: `latex/real_world_experiments_standardized.tex`\n",
       "Generated: `latex/density_experiments.tex`\n",
-      "Generated: `latex/density_experiments_standardized_time.tex`\n",
       "Generated: `latex/density_experiments_standardized.tex`\n",
-      "Generated: `latex/density_experiments_standardized_process_time.tex`\n"
+      "Generated: `latex/real_world_experiments_standardized_time.tex`\n",
+      "Generated: `latex/real_world_experiments_standardized_process_time.tex`\n",
+      "Generated: `latex/density_experiments_standardized_process_time.tex`\n",
+      "Generated: `latex/density_experiments_standardized_time.tex`\n",
+      "Generated: `latex/density_standardized_clusterings.tex`\n"
      ]
     }
    ],
@@ -539,6 +590,8 @@
     "\n",
     "pool = WorkerPool(n_jobs=30, use_dill=True)\n",
     "pool.map_unordered(generate_latex_file, configs.values())\n",
+    "pool.map_unordered(generate_latex_file, config_runtimes.values())\n",
+    "pool.map_unordered(generate_latex_file, config_clusterings.values())\n",
     "pool.stop_and_join()\n",
     "pool.terminate()"
    ]
@@ -655,6 +708,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
