--- a/src/Stuff.ipynb
+++ b/src/Stuff.ipynb
@@ -478,9 +478,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "cmap = plt.colormaps[\"gist_rainbow\"]\n",
-    "new_cmap = truncate_colormap(cmap, 0.1, 0.9)\n",
-    "ax = plt.scatter(X[:, 0], X[:, 1], s=3, c=disco_values, vmin=0, vmax=1, cmap=new_cmap)\n",
+    "cmap = truncate_colormap(plt.colormaps[\"gist_rainbow\"], 0.1, 0.9)\n",
+    "ax = plt.scatter(X[:, 0], X[:, 1], s=3, c=disco_values, vmin=0, vmax=1, cmap=cmap)\n",
     "plt.colorbar(ax)\n",
     "\n",
     "plt.show()"
