--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -566,15 +566,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated: `latex/real_world_experiments.tex`\n",
-      "Generated: `latex/real_world_experiments_standardized.tex`\n",
+      "Generated: `latex/real_world_experiments.tex`Generated: `latex/real_world_experiments_standardized.tex`\n",
+      "\n",
       "Generated: `latex/density_experiments.tex`\n",
       "Generated: `latex/density_experiments_standardized.tex`\n",
       "Generated: `latex/real_world_experiments_standardized_time.tex`\n",
@@ -708,18 +708,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.4"
   }
  },
  "nbformat": 4,
