--- a/src/Experiments/Datasets2LaTeX.ipynb
+++ b/src/Experiments/Datasets2LaTeX.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,27 +561,35 @@
     "        \"latex_coloring_axis\": 1,\n",
     "        # \"latex_coloring_selection\": RUNTIME_METRICS,\n",
     "    },\n",
+    "    # ARI\n",
+    "    \"density_standardized_colored_row_wise_clusterings_ari\": {\n",
+    "        \"path\": \"results/ari/density_standardized/\",\n",
+    "        \"latex_path\": \"latex/density_standardized_clusterings_ari.tex\",\n",
+    "        \"dataset_names\": [dataset.name for dataset in DensityDatasets],\n",
+    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "        \"metrics\": list(CLUSTER_ALGORITHMS.keys()),\n",
+    "        \"metric_abbrev\": CLUSTER_ABBREV,\n",
+    "        # \"lower_is_better\": METRICS,\n",
+    "        \"selection\": [\"value\"],\n",
+    "        \"caption\": \"ARI values on different Clusterings\",\n",
+    "        \"categories\": [],\n",
+    "        \"latex_coloring_axis\": 1,\n",
+    "        # \"latex_coloring_selection\": RUNTIME_METRICS,\n",
+    "    },\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated: `latex/real_world_experiments.tex`Generated: `latex/real_world_experiments_standardized.tex`\n",
-      "\n",
-      "Generated: `latex/density_experiments.tex`\n",
-      "Generated: `latex/density_experiments_standardized.tex`\n",
-      "Generated: `latex/real_world_experiments_standardized_time.tex`\n",
-      "Generated: `latex/real_world_experiments_standardized_process_time.tex`\n",
-      "Generated: `latex/density_experiments_standardized_process_time.tex`\n",
-      "Generated: `latex/density_experiments_standardized_time.tex`\n",
-      "Generated: `latex/density_standardized_clusterings.tex`\n"
+      "Generated: `latex/density_standardized_clusterings.tex`\n",
+      "Generated: `latex/density_standardized_clusterings_ari.tex`\n"
      ]
     }
    ],
@@ -589,8 +597,8 @@
     "from mpire.pool import WorkerPool\n",
     "\n",
     "pool = WorkerPool(n_jobs=30, use_dill=True)\n",
-    "pool.map_unordered(generate_latex_file, configs.values())\n",
-    "pool.map_unordered(generate_latex_file, config_runtimes.values())\n",
+    "# pool.map_unordered(generate_latex_file, configs.values())\n",
+    "# pool.map_unordered(generate_latex_file, config_runtimes.values())\n",
     "pool.map_unordered(generate_latex_file, config_clusterings.values())\n",
     "pool.stop_and_join()\n",
     "pool.terminate()"
@@ -708,6 +716,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
