--- a/src/Experiments/Stuff.ipynb
+++ b/src/Experiments/Stuff.ipynb
@@ -672,6 +672,46 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "& 3-spiral & 312 & 2 & 3 & 0 & \\cite{deric}\\\\\n",
+      "& aggregation & 788 & 2 & 7 & 0 & \\cite{deric}\\\\\n",
+      "& chainlink & 1000 & 3 & 2 & 0 & \\cite{deric}\\\\\n",
+      "& cluto-t4-8k & 8000 & 2 & 7 & 764 & \\cite{deric}\\\\\n",
+      "& cluto-t5-8k & 8000 & 2 & 7 & 1153 & \\cite{deric}\\\\\n",
+      "& cluto-t7-10k & 10000 & 2 & 10 & 792 & \\cite{deric}\\\\\n",
+      "& cluto-t8-8k & 8000 & 2 & 9 & 323 & \\cite{deric}\\\\\n",
+      "& complex8 & 2551 & 2 & 8 & 0 & \\cite{deric}\\\\\n",
+      "& complex9 & 3031 & 2 & 9 & 0 & \\cite{deric}\\\\\n",
+      "& compound & 399 & 2 & 6 & 0 & \\cite{deric}\\\\\n",
+      "& dartboard1 & 1000 & 2 & 4 & 0 & \\cite{deric}\\\\\n",
+      "& diamond9 & 3000 & 2 & 9 & 0 & \\cite{deric}\\\\\n",
+      "& smile1 & 1000 & 2 & 4 & 0 & \\cite{deric}\\\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets.density_datasets import Datasets as DensityDatasets \n",
+    "\n",
+    "for dataset in DensityDatasets:\n",
+    "    X, l = dataset.data_cached\n",
+    "    print(f\"& {dataset.name} & {len(X)} & {X.shape[1]} & {len(set(l))} & {len(l[l==-1])} &\" + \" \\\\cite{deric}\\\\\\\\\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -679,6 +719,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
