--- a/src/Experiments/scripts/Datasets2LaTeX.ipynb
+++ b/src/Experiments/scripts/Datasets2LaTeX.ipynb
@@ -716,6 +716,10 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
