--- a/src/Experiments/Error.ipynb
+++ b/src/Experiments/Error.ipynb
@@ -134,6 +134,94 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\\\\cellcolor{Green!16} ',\n",
+       " '\\\\cellcolor{Red!21} ',\n",
+       " '\\\\cellcolor{Red!50} ',\n",
+       " '\\\\cellcolor{Red!50} ',\n",
+       " '\\\\cellcolor{Green!38} ',\n",
+       " '\\\\cellcolor{Green!13} ',\n",
+       " '\\\\cellcolor{Green!19} ',\n",
+       " '\\\\cellcolor{Green!1} ',\n",
+       " '\\\\cellcolor{Green!48} ',\n",
+       " '\\\\cellcolor{Green!22} ']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.set_printoptions(suppress=True)\n",
+    "\n",
+    "val = np.array([[[0.59,0.00],[0.36,0.03]], \\\n",
+    "    [[0.0,0.36],[-0.01,0.41]], \\\n",
+    "    [[2.79,1.96],[0.59,0.47]], \\\n",
+    "    [[5.49,3.63],[5.11,4.81]], \\\n",
+    "    [[0.54,-0.97],[-0.05,-0.81]], \\\n",
+    "    [[0.93,0.01],[0.95,0.69]], \\\n",
+    "    [[0.66,0.03],[0.55,0.17]], \\\n",
+    "    [[0.31,0.26],[0.63,0.61]], \\\n",
+    "    [[189.35,0.35],[689.4,32.18]], \\\n",
+    "    [[0.01,0.01],[0.61,0.17]]])\n",
+    "\n",
+    "l = val[:,1]\n",
+    "l[2] = np.max(l[2]) - l[2]\n",
+    "l[3] = np.max(l[3]) - l[3]\n",
+    "l[2] = l[2] / np.max(l[2])\n",
+    "l[3] = l[2] / np.max(l[2])\n",
+    "l[8] = l[8] / np.max(l[8])\n",
+    "diff = l[:,0] - l[:,1]\n",
+    "colors = np.round(diff * 50).astype(int)\n",
+    "[f\"\\\\cellcolor{{{\"Green\" if color >= 0 else \"Red\"}!{np.abs(color)}}} \" for color in colors]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "[\n",
+    " \\cellcolor{Green!30}\n",
+    " \\cellcolor{Red!18}\n",
+    " \\cellcolor{Red!50}\n",
+    " \\cellcolor{Red!50}\n",
+    " \\cellcolor{Green!76}\n",
+    " \\cellcolor{Green!46}\n",
+    " \\cellcolor{Green!32}\n",
+    " \\cellcolor{Green!2}\n",
+    " \\cellcolor{Green!50}\n",
+    " \\cellcolor{Green!0}\n",
+    "]\n",
+    "\n",
+    "[\n",
+    " \\cellcolor{Green!16}\n",
+    " \\cellcolor{Red!21}\n",
+    " \\cellcolor{Red!50}\n",
+    " \\cellcolor{Red!50}\n",
+    " \\cellcolor{Green!38}\n",
+    " \\cellcolor{Green!13}\n",
+    " \\cellcolor{Green!19}\n",
+    " \\cellcolor{Green!1}\n",
+    " \\cellcolor{Green!48}\n",
+    " \\cellcolor{Green!22}\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
