--- a/src/Experiments/scripts/Datasets2LaTeX.ipynb
+++ b/src/Experiments/scripts/Datasets2LaTeX.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.588168Z",
      "start_time": "2024-07-03T14:10:29.446448Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -34,280 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.utils.metrics import METRIC_ABBREV_TABLES"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import glob\n",
-    "import itertools\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "from collections import defaultdict\n",
-    "from collections.abc import Mapping\n",
-    "\n",
-    "\n",
-    "def deep_update(dict, dict_update):\n",
-    "    for k, v in dict_update.items():\n",
-    "        if isinstance(v, Mapping):\n",
-    "            dict[k] = deep_update(dict.get(k, {}), v)\n",
-    "        else:\n",
-    "            dict[k] = v\n",
-    "    return dict\n",
-    "\n",
-    "\n",
-    "def group_by_column_and_aggregate_values(df, column, aggregation_func):\n",
-    "    try:\n",
-    "        column_values = df.groupby([\"dataset\", \"measure\"])[column]\n",
-    "    except:\n",
-    "        column_values = df.groupby([\"dataset\", \"function\"])[column]\n",
-    "    aggregated_values = getattr(column_values, aggregation_func)()\n",
-    "\n",
-    "    data_dict = defaultdict(dict)\n",
-    "    for (dataset, eval_method), aggregated_value in aggregated_values.to_dict().items():\n",
-    "        data_dict[(dataset, aggregation_func)][(eval_method, column)] = aggregated_value\n",
-    "\n",
-    "    return data_dict\n",
-    "\n",
-    "\n",
-    "def calc_pairwise_column_aggregation_func_dict(df, columns, aggregation_funcs):\n",
-    "    pairwise_column_aggregation_func = itertools.product(columns, aggregation_funcs)\n",
-    "    pairwise_column_aggregation_func_data_dict = {}\n",
-    "    for column, aggregations_func in pairwise_column_aggregation_func:\n",
-    "        column_aggregation_func_data_dict = group_by_column_and_aggregate_values(\n",
-    "            df, column, aggregations_func\n",
-    "        )\n",
-    "        deep_update(pairwise_column_aggregation_func_data_dict, column_aggregation_func_data_dict)\n",
-    "    return pairwise_column_aggregation_func_data_dict\n",
-    "\n",
-    "\n",
-    "def gather_and_aggregate_data(path, columns, aggregation_funcs):\n",
-    "    dataframes = [pd.read_csv(path) for path in glob.glob(f\"{path}*/*\")]\n",
-    "    df = pd.concat(dataframes)\n",
-    "\n",
-    "    data_dict = calc_pairwise_column_aggregation_func_dict(df, columns, aggregation_funcs)\n",
-    "    return pd.DataFrame.from_dict(data_dict, orient=\"index\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reindex_df(df, row_index, column_index, precision=3):\n",
-    "    df = df.reindex(row_index)\n",
-    "    df = df.reindex(columns=df.columns.reindex(column_index)[0])\n",
-    "    df = df.round(precision)\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def calc_indices_and_reindex(df, dataset_names, aggregation_funcs, metrics, selection, precision=3):\n",
-    "    if metrics is None:\n",
-    "        metrics = [column[0] for column in df.columns]\n",
-    "    row_index = list(itertools.product(dataset_names, aggregation_funcs))\n",
-    "    column_index = list(itertools.product(metrics, selection))\n",
-    "    return reindex_df(df, row_index=row_index, column_index=column_index, precision=precision)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_regex(expr_list, path):\n",
-    "    for expr in expr_list:\n",
-    "        expr = expr.replace(\"'\", r\"\\x27\")\n",
-    "        expr_ = '\\'' + expr + '\\''\n",
-    "        path_ = '\"' + path + '\"'\n",
-    "        !perl -pwi -e {expr_} {path_}\n",
-    "\n",
-    "def regex_file(path, caption, categories=[], metric_abbrev={}):\n",
-    "    generell_stuff_regex = [\n",
-    "        r's/table/table\\*/g',\n",
-    "        r's/_/\\\\_/g',\n",
-    "        r's/\\\\\\\\\\n/ \\\\\\\\\\n/g',\n",
-    "        r'1 while s/\\$nan( \\\\pm nan)?\\$/-/g',\n",
-    "        # Two digits\n",
-    "        r's/ \\\\pm 0.00?\\$/\\$/g',\n",
-    "        r's/ \\\\pm nan?\\$/\\$/g',\n",
-    "        r's/(\\d\\.\\d)( |\\$)/${1}0$2/g',\n",
-    "        # arraystretch\n",
-    "        r's/(\\\\begin\\{table\\*\\})/\\\\renewcommand\\{\\\\arraystretch\\}\\{1.2\\}\\n\\n\\n$1/g',\n",
-    "        r's/(\\\\end\\{table\\*\\}.*$)/$1\\n\\n\\\\renewcommand\\{\\\\arraystretch\\}\\{1\\}\\n/g',\n",
-    "    ]\n",
-    "\n",
-    "    remove_second_row_index_regex = [\n",
-    "        # Remove second level of row index\n",
-    "        r's/ & \\\\textbf\\{Metric\\}//g',\n",
-    "        # r's/^(.*?& ).*?& /$1/g',\n",
-    "        r's/(\\{tabular\\}\\{l\\|)l\\|/$1/g',\n",
-    "        # Remove all midrules\n",
-    "        r's/\\\\midrule\\n//g',\n",
-    "    ]\n",
-    "\n",
-    "    caption_regex = [\n",
-    "        # Caption\n",
-    "        r's/\\\\caption\\{TODO\\}/\\\\caption\\{%s\\}/g'%(caption),\n",
-    "    ]\n",
-    "\n",
-    "    categories_regex = [\n",
-    "        # Generell categories stuff\n",
-    "        r's/(\\{tabular\\}\\{)/$1r/g',\n",
-    "        r's/^(.*?& )/& $1/g',\n",
-    "    ] + [\n",
-    "        # Categories\n",
-    "        r\"s/(^& %s)/\\\\midrule\\n\\\\parbox[t]\\{2mm\\}\\{\\\\multirow\\{%s\\}\\{*\\}\\{\\\\rotatebox[origin=c]\\{90\\}\\{%s\\}\\}\\}\\n$1/g\"\n",
-    "        % (first_dataset_in_category, nr_of_datasets_in_category, category_name)\n",
-    "        for first_dataset_in_category, nr_of_datasets_in_category, category_name in categories\n",
-    "    ]\n",
-    "\n",
-    "    run_regex(remove_second_row_index_regex, path)\n",
-    "    run_regex(caption_regex, path)\n",
-    "    if len(categories) > 0:\n",
-    "        run_regex(categories_regex, path)\n",
-    "    else:\n",
-    "        # Insert midrule after headline\n",
-    "        run_regex([r's/(^\\\\textbf\\{Dataset\\}.*?$)/$1\\n\\\\midrule/g'], path)\n",
-    "\n",
-    "    if metric_abbrev:\n",
-    "        for metric, abbrev in metric_abbrev.items():\n",
-    "            abbrev = abbrev.replace(\"$\", \"\\\\$\")\n",
-    "            run_regex([r's/& %s( |\\\\)/& %s$1/g'%(metric, abbrev)], path)\n",
-    "\n",
-    "    run_regex(generell_stuff_regex, path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def latex_coloring(\n",
-    "    path,\n",
-    "    skiprows=9,\n",
-    "    axis=0,\n",
-    "    metric_selection=None,\n",
-    "    higher_is_better=None,\n",
-    "    lower_is_better=[],\n",
-    "):\n",
-    "    df = pd.read_csv(\n",
-    "        path, sep=\"&\", header=0, index_col=0, skiprows=skiprows, skipfooter=3, engine=\"python\"\n",
-    "    )\n",
-    "    df = df.drop(df.columns[0], axis=1)\n",
-    "    if None in df.index:\n",
-    "        df = df.drop(index=[None], axis=0)\n",
-    "    if \"\\\\midrule\" in df.index:\n",
-    "        df = df.drop(index=[\"\\\\midrule\"], axis=0)\n",
-    "    df.columns = df.columns.str.replace(\"\\\\\", \"\")\n",
-    "    df.columns = df.columns.str.strip()\n",
-    "    df_std = df.copy()\n",
-    "    df_std = df_std.replace(r\"\\$(.*?) ?(\\\\pm.*?)?\\$(.*\\\\\\\\)?\", value=r\"\\2\", regex=True)\n",
-    "    df_std = df_std.replace(r\" $\", value=\"\", regex=True)\n",
-    "    df = df.replace(r\"\\$(.*?)( \\\\pm.*?)?\\$(.*\\\\\\\\)?\", value=r\"\\1\", regex=True)\n",
-    "    df = df.astype(float)\n",
-    "\n",
-    "    if metric_selection is None:\n",
-    "        metric_selection = df.columns\n",
-    "    df_selected = df[metric_selection]\n",
-    "\n",
-    "    df_min = df.copy()\n",
-    "    df_max = df.copy()\n",
-    "    df_min.loc[:, metric_selection] = np.expand_dims(df_selected.min(axis=axis, skipna=True).values, axis=axis)  # type: ignore\n",
-    "    df_max.loc[:, metric_selection] = np.expand_dims(df_selected.max(axis=axis, skipna=True).values, axis=axis)  # type: ignore\n",
-    "\n",
-    "    df_color_saturation = df.copy()\n",
-    "    df_color_saturation.loc[:,:] = 0\n",
-    "    if higher_is_better is None:\n",
-    "        higher_is_better = df.columns\n",
-    "    df_color_saturation.loc[:, higher_is_better] = (\n",
-    "        df.loc[:, higher_is_better] - df_min.loc[:, higher_is_better]\n",
-    "    ) / (df_max.loc[:, higher_is_better] - df_min.loc[:, higher_is_better])\n",
-    "    lower_is_better = [metric for metric in lower_is_better if metric in df.columns]\n",
-    "    df_color_saturation.loc[:, lower_is_better] = (\n",
-    "        df_max.loc[:, lower_is_better] - df.loc[:, lower_is_better]\n",
-    "    ) / (df_max.loc[:, lower_is_better] - df_min.loc[:, lower_is_better])\n",
-    "    df_color_saturation = df_color_saturation * 65 + 5\n",
-    "    df_color_saturation.replace(np.nan, 0, inplace=True)\n",
-    "    df_color_saturation = df_color_saturation.astype(int)\n",
-    "\n",
-    "    df_latex = df.astype(str).combine(df_color_saturation.astype(str), lambda value, color_saturation: \"\\\\cellcolor{\" + \"Green\" + \"!\" + color_saturation + r\"} $\" + value)\n",
-    "    df_latex = df_latex + df_std\n",
-    "    df_latex = df_latex.replace(r\" $\", value=\"\", regex=True)\n",
-    "    df_latex = df_latex + \"$\"\n",
-    "    df_latex.insert(0, \"dataset\", df_latex.index.str.strip())\n",
-    "    df_joined_columns = df_latex[df_latex.columns[:]].apply(lambda x: \" & \".join(x), axis=1)\n",
-    "    df_joined_columns = df_joined_columns.replace(\"\\\\\\\\\", \"\\\\\\\\\\\\\\\\\", regex=True)\n",
-    "    df_joined_columns.index = df_joined_columns.index.str.replace(\"\\\\\", \"\\\\\\\\\")\n",
-    "\n",
-    "    for dataset, row in df_joined_columns.items():\n",
-    "        row = row.replace(\"$\", \"\\\\$\")\n",
-    "        run_regex([r's/%s.*\\\\\\\\/%s \\\\\\\\/g'%(dataset, row)], path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from clustpy.utils import evaluation_df_to_latex_table\n",
-    "from src.utils.metrics import METRIC_ABBREV_TABLES\n",
-    "\n",
-    "\n",
-    "def generate_latex_file(\n",
-    "    path,\n",
-    "    latex_path,\n",
-    "    dataset_names,\n",
-    "    aggregation_funcs=[\"mean\", \"std\"],\n",
-    "    metrics=None,\n",
-    "    metric_abbrev=METRIC_ABBREV_TABLES,\n",
-    "    selection=[\"value\", \"time\", \"process_time\"],\n",
-    "    caption=\"TODO\",\n",
-    "    categories=[],\n",
-    "    precision=3,\n",
-    "    latex_coloring_axis=None,\n",
-    "    latex_coloring_selection=None,\n",
-    "    higher_is_better=None,\n",
-    "    lower_is_better=[],\n",
-    "):\n",
-    "    df_matrix = gather_and_aggregate_data(\n",
-    "        path, columns=selection, aggregation_funcs=aggregation_funcs\n",
-    "    )\n",
-    "    df_reindexed = calc_indices_and_reindex(\n",
-    "        df_matrix, dataset_names, aggregation_funcs, metrics, selection, precision=precision\n",
-    "    )\n",
-    "    evaluation_df_to_latex_table(\n",
-    "        df_reindexed,\n",
-    "        latex_path,\n",
-    "        best_in_bold=False,\n",
-    "        second_best_underlined=False,\n",
-    "        in_percent=False,\n",
-    "        decimal_places=2,\n",
-    "    )\n",
-    "\n",
-    "    if latex_coloring_axis is not None:\n",
-    "        latex_coloring(latex_path, skiprows=6, axis=latex_coloring_axis, metric_selection=latex_coloring_selection, higher_is_better=higher_is_better, lower_is_better=lower_is_better)\n",
-    "\n",
-    "    regex_file(latex_path, caption=caption, categories=categories, metric_abbrev=metric_abbrev)\n",
-    "    print(f\"Generated: `{latex_path}`\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,19 +299,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated: `latex/density_standardized_clusterings.tex`\n",
-      "Generated: `latex/density_standardized_clusterings_ari.tex`\n"
+      "Generated: `latex/density_standardized_clusterings_ari.tex`Generated: `latex/density_standardized_clusterings.tex`\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "from src.utils.latex_pandas import generate_latex_file\n",
     "from mpire.pool import WorkerPool\n",
     "\n",
     "pool = WorkerPool(n_jobs=30, use_dill=True)\n",
@@ -602,105 +321,6 @@
     "pool.map_unordered(generate_latex_file, config_clusterings.values())\n",
     "pool.stop_and_join()\n",
     "pool.terminate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.6229067378440645"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from src.utils.metrics import DB, CH, S_DBW\n",
-    "\n",
-    "X, l = DensityDatasets.dartboard1.standardized_data_cached\n",
-    "S_DBW(X[l != -1], l[l != -1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "47275.21919050223"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X, l = DensityDatasets.cluto_t5_8k.data_cached\n",
-    "CH(X[l!=-1], l[l!=-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X, l = DensityDatasets.dartboard1.standardized_data_cached\n",
-    "\n",
-    "datasets = {}\n",
-    "np.random.seed(0)\n",
-    "seeds = np.random.choice(10_000, size=10, replace=False)\n",
-    "for run in range(10):\n",
-    "    np.random.seed(seeds[run])\n",
-    "    shuffle_data_index = np.random.choice(len(X), size=len(X), replace=False)\n",
-    "    X_ = X[shuffle_data_index]\n",
-    "    l_ = l[shuffle_data_index]\n",
-    "    datasets[run] = (X_, l_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.7125248320227824,\n",
-       " 1.7491498886700856,\n",
-       " 1.5734443722526668,\n",
-       " 1.6824502635722405,\n",
-       " 1.6564048633332913,\n",
-       " 1.6882179890285087,\n",
-       " 1.5548063794211258,\n",
-       " 1.7755537118481022,\n",
-       " 1.7491498886700858,\n",
-       " 1.712524832022782]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[S_DBW(X, l) for X, l in datasets.values()]"
    ]
   },
   {
@@ -718,7 +338,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
