--- a/src/Experiments/ClusteringExample.ipynb
+++ b/src/Experiments/ClusteringExample.ipynb
@@ -130,7 +130,29 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "measure\n",
+       "CDBW            0.607409\n",
+       "CVDD          689.402844\n",
+       "CVNN            5.110839\n",
+       "DBCV            0.166954\n",
+       "DCSI            0.948162\n",
+       "DISCO           0.357815\n",
+       "LCCV            0.553879\n",
+       "SILHOUETTE     -0.011736\n",
+       "S_DBW           0.591154\n",
+       "VIASCKDE        0.631906\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from src.utils.experiments import calc_eval_measures_for_multiple_datasets\n",
     "\n",
@@ -141,9 +163,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "measure\n",
+       "CDBW           0.206764\n",
+       "CVDD          20.276193\n",
+       "CVNN           4.804724\n",
+       "DBCV          -0.840577\n",
+       "DCSI           0.697268\n",
+       "DISCO          0.046401\n",
+       "LCCV           0.157141\n",
+       "SILHOUETTE     0.403822\n",
+       "S_DBW          0.494033\n",
+       "VIASCKDE       0.608416\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from src.utils.experiments import calc_eval_measures_for_multiple_datasets\n",
     "\n",
