--- a/src/Experiments/DBCV_non_deterministic.ipynb
+++ b/src/Experiments/DBCV_non_deterministic.ipynb
@@ -22,7 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "id": "431cd2d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "%store -r DISCO_ROOT_FOLDER\n",
+    "if \"DISCO_ROOT_FOLDER\" in globals():\n",
+    "    os.chdir(DISCO_ROOT_FOLDER)\n",
+    "    sys.path.append(DISCO_ROOT_FOLDER)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "d4a58daccf2e65ae",
    "metadata": {
     "ExecuteTime": {
@@ -54,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6f0462cf42dfb7d8",
    "metadata": {
     "ExecuteTime": {
@@ -73,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "cea65ac6bc874553",
    "metadata": {
     "ExecuteTime": {
@@ -205,18 +224,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "505010d5d1e522ab",
    "metadata": {
     "collapsed": false,
     "is_executing": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 42%|████▏     | 416/1000 [09:27<13:20,  1.37s/it]"
+     ]
+    }
+   ],
    "source": [
+    "from src.utils.experiments import cache\n",
+    "\n",
     "n = 1000\n",
     "\n",
-    "dbcv_list_cluto_4_8_std = run_multiple_shuffle_runs(n, X_cluto_4_8_std, l_cluto_4_8_std)\n",
-    "dbcv_list_cluto_8_8_std = run_multiple_shuffle_runs(n, X_cluto_8_8_std, l_cluto_8_8_std)"
+    "dbcv_list_cluto_4_8_std = cache(\n",
+    "    \"dbcv_list_cluto_4_8_std\", run_multiple_shuffle_runs, args=(n, X_cluto_4_8_std, l_cluto_4_8_std)\n",
+    ")\n",
+    "dbcv_list_cluto_8_8_std = cache(\n",
+    "    \"dbcv_list_cluto_8_8_std\", run_multiple_shuffle_runs, args=(n, X_cluto_8_8_std, l_cluto_8_8_std)\n",
+    ")"
    ]
   },
   {
@@ -264,7 +297,7 @@
     "sns.move_legend(ax, bbox_to_anchor=(1, 0.5), loc='center left', frameon=False)\n",
     "plt.tight_layout()\n",
     "fig.set_dpi(300)\n",
-    "plt.savefig('DBCV.png', dpi=300)"
+    "plt.savefig(\"DBCV.pdf\", dpi=300, format=\"pdf\", bbox_inches=\"tight\", pad_inches=0)"
    ]
   },
   {
