--- a/src/Experiments/scripts/Datasets2LaTeX.ipynb
+++ b/src/Experiments/scripts/Datasets2LaTeX.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 109,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.588168Z",
      "start_time": "2024-07-03T14:10:29.446448Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -351,7 +360,7 @@
     "        \"categories\": [\n",
     "            (\"htru2\", 5, \"Tabular data\"),\n",
     "            (\"cmu_faces\", 6, \"Image data\"),\n",
-    "            (\"smile1\", 13, \"Tomas Barton Benchmark\"),\n",
+    "            (\"smile1\", 12, \"Tomas Barton Benchmark\"),\n",
     "            (\"Synth_high\", 6, \"High-dimensional\"),\n",
     "        ],\n",
     "        \"latex_coloring_axis\": 0,\n",
@@ -440,94 +449,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "from src.utils.latex_pandas import gather_and_aggregate_data\n",
     "\n",
-    "path = \"latex/all_experiments_standardized.tex\"\n",
-    "axis=0\n",
-    "skiprows=10\n",
-    "lower_is_better=[]\n",
-    "\n",
-    "df = pd.read_csv(\n",
-    "    path, sep=\"&\", header=0, index_col=0, skiprows=skiprows, skipfooter=3, engine=\"python\"\n",
-    ")\n",
-    "df = df.drop(df.columns[0], axis=1)\n",
-    "if None in df.index:\n",
-    "    df = df.drop(index=[None], axis=0)\n",
-    "if \"\\\\midrule\" in df.index:\n",
-    "    df = df.drop(index=[\"\\\\midrule\"], axis=0)\n",
-    "df.columns = df.columns.str.replace(\"\\\\\", \"\")\n",
-    "df.columns = df.columns.str.strip()\n",
-    "df_std = df.copy()\n",
-    "df_std = df_std.replace(r\"\\$(.*?) ?(\\\\pm.*?)?\\$(.*\\\\\\\\)?\", value=r\"\\2\", regex=True)\n",
-    "df_std = df_std.replace(r\" $\", value=\"\", regex=True)\n",
-    "df = df.replace(r\"\\$(.*?)( \\\\pm.*?)?\\$(.*\\\\\\\\)?\", value=r\"\\1\", regex=True)\n",
-    "df = df.astype(float)\n",
-    "\n",
-    "metric_selection = df.columns\n",
-    "df_selected = df[metric_selection]\n",
-    "\n",
-    "\n",
-    "df_min_positives = df.copy()\n",
-    "df_max_positives = df.copy()\n",
-    "if axis is None:\n",
-    "    df_min_positives.loc[:, metric_selection] = df_selected.min(axis=axis, skipna=True)\n",
-    "    df_min_negatives = df_min_positives.copy()\n",
-    "    df_min_positives.loc[(df_selected < 0) & (df_min_positives.columns == metric_selection)] = 0\n",
-    "    df_max_positives.loc[:, metric_selection] = df_selected.max(axis=axis, skipna=True)\n",
-    "    df_max_negatives = df_max_positives.copy()\n",
-    "    df_max_negatives.loc[[df_selected > 0], metric_selection] = 0\n",
-    "else:\n",
-    "    df_min_positives.loc[:, metric_selection] = np.expand_dims(df_selected.min(axis=axis, skipna=True).values, axis=axis)\n",
-    "    df_min_negatives = df_min_positives.copy()\n",
-    "    df_min_positives[(df_selected < 0) & (df_min_positives.columns == metric_selection)] = 0\n",
-    "    df_max_positives.loc[:, metric_selection] = np.expand_dims(df_selected.max(axis=axis, skipna=True).values, axis=axis)\n",
-    "    df_max_negatives = df_max_positives.copy()\n",
-    "    df_max_negatives[(df_selected > 0) & (df_max_negatives.columns == metric_selection)] = 0\n",
-    "\n",
-    "\n",
-    "df_color_saturation = df.copy()\n",
-    "df_color_saturation.loc[:,:] = 0\n",
-    "higher_is_better = df.columns\n",
-    "df_color_saturation.loc[:, higher_is_better][df_selected > 0] = (\n",
-    "    df.loc[:, higher_is_better][df_selected > 0] - df_min_positives.loc[:, higher_is_better][df_selected > 0]\n",
-    ") / (df_max_positives.loc[:, higher_is_better][df_selected > 0] - df_min_positives.loc[:, higher_is_better][df_selected > 0])\n",
-    "df_color_saturation.loc[:, higher_is_better][df_selected < 0] = (\n",
-    "    df_max_negatives.loc[:, higher_is_better][df_selected < 0] - df.loc[:, higher_is_better][df_selected < 0]\n",
-    ") / (df_max_negatives.loc[:, higher_is_better][df_selected < 0] - df_min_negatives.loc[:, higher_is_better][df_selected < 0])\n",
-    "lower_is_better = [metric for metric in lower_is_better if metric in df.columns]\n",
-    "df_color_saturation.loc[:, lower_is_better][df_selected > 0] = (\n",
-    "    df_max_positives.loc[:, lower_is_better][df_selected > 0] - df.loc[:, lower_is_better][df_selected > 0]\n",
-    ") / (df_max_positives.loc[:, lower_is_better][df_selected > 0] - df_min_positives.loc[:, lower_is_better][df_selected > 0])\n",
-    "df_color_saturation.loc[:, lower_is_better][df_selected < 0] = (\n",
-    "    df.loc[:, lower_is_better][df_selected < 0] - df_max_negatives.loc[:, lower_is_better][df_selected < 0]\n",
-    ") / (df_max_negatives.loc[:, lower_is_better][df_selected < 0] - df_min_negatives.loc[:, lower_is_better][df_selected < 0])\n",
-    "df_color_saturation = df_color_saturation.abs()\n",
-    "df_color_saturation = df_color_saturation * 65 + 5\n",
-    "df_color_saturation.replace(np.nan, 0, inplace=True)\n",
-    "df_color_saturation = df_color_saturation.astype(int)\n",
-    "\n",
-    "df_latex = df.astype(str).combine(df_color_saturation.astype(str), lambda value, color_saturation: \"\\\\cellcolor{\" + value.apply(lambda x: \"Green\" if float(x) >= 0 else \"Red\") + \"!\" + color_saturation + r\"} $\" + value)\n",
-    "df_latex = df_latex + df_std\n",
-    "df_latex = df_latex.replace(r\" $\", value=\"\", regex=True)\n",
-    "df_latex = df_latex + \"$\"\n",
-    "df_latex.insert(0, \"dataset\", df_latex.index.str.strip())\n",
-    "df_joined_columns = df_latex[df_latex.columns[:]].apply(lambda x: \" & \".join(x), axis=1)\n",
-    "df_joined_columns = df_joined_columns.replace(\"\\\\\\\\\", \"\\\\\\\\\\\\\\\\\", regex=True)\n",
-    "df_joined_columns.index = df_joined_columns.index.str.replace(\"\\\\\", \"\\\\\\\\\")"
+    "df1 = gather_and_aggregate_data([\"results/ari/density_standardized/\"], [\"value\"], aggregation_funcs=[\"mean\"])\n",
+    "df2 = gather_and_aggregate_data([\"clustering_results2/density_standardized/\"], [\"value\"], aggregation_funcs=[\"mean\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_joined_columns.to_csv(\"test\")"
+    "df1 = df1.drop([\"cluto-t4-8k\", \"cluto-t5-8k\", \"cluto-t7-10k\", \"cluto-t8-8k\"])\n",
+    "df1.columns = df1.columns.get_level_values(0)\n",
+    "df1.index = df1.index.get_level_values(0)\n",
+    "df1 = df1.reindex(columns=df1.columns.reindex(list(CLUSTER_ALGORITHMS.keys()))[0])\n",
+    "df2 = df2.drop([\"cluto-t4-8k\", \"cluto-t5-8k\", \"cluto-t7-10k\", \"cluto-t8-8k\"])\n",
+    "df2.columns = df2.columns.get_level_values(0)\n",
+    "df2.index = df2.index.get_level_values(0)\n",
+    "df2 = df2.reindex(columns=df2.columns.reindex(list(CLUSTER_ALGORITHMS.keys()))[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7\n",
+      "[ nan 0.47 0.28 0.67 0.6  0.75 0.96 0.71]\n",
+      "[ 1.   -0.12  0.98  0.91  0.41  0.59  0.92  0.95  0.88]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_861661/3885098068.py:5: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
+      "  print(np.round(np.array(list(pearsonr(df1.to_numpy(), df2.to_numpy(), axis=0))[0]), 2))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import pearsonr\n",
+    "import numpy as np\n",
+    "\n",
+    "print(round(pearsonr(df1.to_numpy(), df2.to_numpy(), axis=None)[0],2))\n",
+    "print(np.round(np.array(list(pearsonr(df1.to_numpy(), df2.to_numpy(), axis=0))[0]), 2))\n",
+    "print(np.round(np.array(list(pearsonr(df1.to_numpy(), df2.to_numpy(), axis=1))[0]), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GroundTruth</th>\n",
+       "      <th>DBSCAN</th>\n",
+       "      <th>HDBSCAN</th>\n",
+       "      <th>DPC</th>\n",
+       "      <th>SpectralClustering</th>\n",
+       "      <th>Agglomerative</th>\n",
+       "      <th>MeanShift</th>\n",
+       "      <th>KMeans</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3-spiral</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.942273</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.004251</td>\n",
+       "      <td>-0.003836</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.005799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aggregation</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.974505</td>\n",
+       "      <td>0.808943</td>\n",
+       "      <td>0.794592</td>\n",
+       "      <td>0.823621</td>\n",
+       "      <td>0.701754</td>\n",
+       "      <td>0.628476</td>\n",
+       "      <td>0.714612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chainlink</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.201054</td>\n",
+       "      <td>0.503609</td>\n",
+       "      <td>-0.001000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.064090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>complex8</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.939442</td>\n",
+       "      <td>0.872419</td>\n",
+       "      <td>0.239948</td>\n",
+       "      <td>0.437614</td>\n",
+       "      <td>0.511867</td>\n",
+       "      <td>0.230167</td>\n",
+       "      <td>0.465176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>complex9</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.999518</td>\n",
+       "      <td>0.261933</td>\n",
+       "      <td>0.072852</td>\n",
+       "      <td>0.361618</td>\n",
+       "      <td>0.327539</td>\n",
+       "      <td>0.182629</td>\n",
+       "      <td>0.360767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>compound</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.573870</td>\n",
+       "      <td>0.811288</td>\n",
+       "      <td>0.740208</td>\n",
+       "      <td>0.561191</td>\n",
+       "      <td>0.501062</td>\n",
+       "      <td>0.722306</td>\n",
+       "      <td>0.527150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dartboard1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.009188</td>\n",
+       "      <td>-0.002954</td>\n",
+       "      <td>0.041462</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.002991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>diamond9</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.875371</td>\n",
+       "      <td>0.743204</td>\n",
+       "      <td>0.127495</td>\n",
+       "      <td>0.964994</td>\n",
+       "      <td>0.996266</td>\n",
+       "      <td>0.147651</td>\n",
+       "      <td>0.961846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smile1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.332665</td>\n",
+       "      <td>0.636015</td>\n",
+       "      <td>0.568858</td>\n",
+       "      <td>0.330534</td>\n",
+       "      <td>0.545919</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             GroundTruth    DBSCAN   HDBSCAN       DPC  SpectralClustering  \\\n",
+       "3-spiral             1.0  1.000000  0.942273  1.000000           -0.004251   \n",
+       "aggregation          1.0  0.974505  0.808943  0.794592            0.823621   \n",
+       "chainlink            1.0  1.000000  1.000000  0.201054            0.503609   \n",
+       "complex8             1.0  0.939442  0.872419  0.239948            0.437614   \n",
+       "complex9             1.0  0.999518  0.261933  0.072852            0.361618   \n",
+       "compound             1.0  0.573870  0.811288  0.740208            0.561191   \n",
+       "dartboard1           1.0  1.000000  1.000000  0.009188           -0.002954   \n",
+       "diamond9             1.0  0.875371  0.743204  0.127495            0.964994   \n",
+       "smile1               1.0  1.000000  1.000000  0.332665            0.636015   \n",
+       "\n",
+       "             Agglomerative  MeanShift    KMeans  \n",
+       "3-spiral         -0.003836   0.000000 -0.005799  \n",
+       "aggregation       0.701754   0.628476  0.714612  \n",
+       "chainlink        -0.001000   0.000000  0.064090  \n",
+       "complex8          0.511867   0.230167  0.465176  \n",
+       "complex9          0.327539   0.182629  0.360767  \n",
+       "compound          0.501062   0.722306  0.527150  \n",
+       "dartboard1        0.041462   0.000000 -0.002991  \n",
+       "diamond9          0.996266   0.147651  0.961846  \n",
+       "smile1            0.568858   0.330534  0.545919  "
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1"
    ]
   },
   {
@@ -543,18 +700,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.4"
   }
  },
  "nbformat": 4,
