--- a/src/Experiments/scripts/RunDatasetsJupyterNotebooks.ipynb
+++ b/src/Experiments/scripts/RunDatasetsJupyterNotebooks.ipynb
@@ -20,25 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoBlobs_dist.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_density.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_dims.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_noise and minPoints.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/TwoMoons_nswap.ipynb\n",
-      "[NbClientApp] Executing src/Experiments/DatasetsJupyterNotebooks/Noise.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/JupyterNotebooks_SyntheticExperiments/TwoMoons_dims.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/JupyterNotebooks_SyntheticExperiments/TwoMoons_variance and minPoints.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/JupyterNotebooks_SyntheticExperiments/TwoBlobs_dist.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/JupyterNotebooks_SyntheticExperiments/TenLines.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/JupyterNotebooks_SyntheticExperiments/Noise.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/JupyterNotebooks_SyntheticExperiments/TwoMoons_density.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/JupyterNotebooks_SyntheticExperiments/Synth_Noise.ipynb\n",
+      "[NbClientApp] Executing src/Experiments/JupyterNotebooks_SyntheticExperiments/TwoMoons_nswap.ipynb\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
       "[NbClientApp] Executing notebook with kernel: python3\n",
-      "[NbClientApp] Executing notebook with kernel: python3\n"
+      "[NbClientApp] Executing notebook with kernel: python3\n",
+      "[NbClientApp] Executing notebook with kernel: python3\n",
+      "[NbClientApp] Executing notebook with kernel: python3\n",
+      "\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m\u001b[0m"
      ]
     }
    ],
@@ -49,10 +54,12 @@
     "\n",
     "notebooks = [\n",
     "    \"TwoMoons_nswap\",\n",
-    "    \"TwoMoons_noise and minPoints\",\n",
+    "    \"TwoMoons_variance and minPoints\",\n",
     "    \"TwoMoons_dims\",\n",
     "    \"TwoMoons_density\",\n",
     "    \"TwoBlobs_dist\",\n",
+    "    \"Synth_Noise\",\n",
+    "    \"TenLines\",\n",
     "    \"Noise\",\n",
     "]\n",
     "\n",
@@ -76,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
