--- a/src/Experiments/scripts/Datasets2LaTeX.ipynb
+++ b/src/Experiments/scripts/Datasets2LaTeX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-07-03T14:10:30.588168Z",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,22 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset_names = [\n",
     "    RealWorldDatasets.htru2,\n",
-    "    RealWorldDatasets.Pendigits,\n",
-    "    RealWorldDatasets.Mice,\n",
-    "    RealWorldDatasets.letterrec,\n",
+    "    # RealWorldDatasets.Pendigits,\n",
+    "    # RealWorldDatasets.Mice,\n",
+    "    # RealWorldDatasets.letterrec,\n",
     "    RealWorldDatasets.HAR,\n",
-    "    RealWorldDatasets.cmu_faces,\n",
-    "    RealWorldDatasets.Optdigits,\n",
-    "    RealWorldDatasets.USPS,\n",
+    "    # RealWorldDatasets.cmu_faces,\n",
+    "    # RealWorldDatasets.Optdigits,\n",
+    "    # RealWorldDatasets.USPS,\n",
     "    RealWorldDatasets.MNIST,\n",
-    "    RealWorldDatasets.KMNIST,\n",
-    "    RealWorldDatasets.FMNIST,\n",
+    "    # RealWorldDatasets.KMNIST,\n",
+    "    # RealWorldDatasets.FMNIST,\n",
     "    DensityDatasets.smile1,\n",
     "    DensityDatasets.dartboard1,\n",
     "    DensityDatasets.chainlink,\n",
@@ -336,11 +336,11 @@
     "    DensityDatasets.cluto_t7_10k,\n",
     "    DensityDatasets.cluto_t4_8k,\n",
     "    DensityDatasets.diamond9,\n",
-    "    DensityDatasets.cluto_t5_8k,\n",
+    "    # DensityDatasets.cluto_t5_8k,\n",
     "    RealWorldDatasets.Synth_high,\n",
     "    RealWorldDatasets.Synth_low,\n",
     "    RealWorldDatasets.COIL20,\n",
-    "    RealWorldDatasets.COIL100,\n",
+    "    # RealWorldDatasets.COIL100,\n",
     "    RealWorldDatasets.Weizmann,\n",
     "    RealWorldDatasets.Keck,\n",
     "]\n",
@@ -352,17 +352,17 @@
     "        \"paths\": [\"results/real_world_standardized/\", \"results/density_standardized/\"],\n",
     "        \"latex_path\": \"latex/all_experiments_standardized.tex\",\n",
     "        \"dataset_names\": dataset_names,\n",
-    "        \"aggregation_funcs\": [\"mean\", \"std\"],\n",
+    "        \"aggregation_funcs\": [\"mean\"],\n",
     "        \"metrics\": METRICS,\n",
     "        \"lower_is_better\": [\"CVNN\", \"DCVI\", \"S_DBW\"],\n",
     "        \"selection\": [\"value\"],\n",
     "        \"caption\": \"Evaluating on several datasets (standardized). Column-wise Green.\",\n",
-    "        \"categories\": [\n",
-    "            (\"htru2\", 5, \"Tabular data\"),\n",
-    "            (\"cmu_faces\", 6, \"Image data\"),\n",
-    "            (\"smile1\", 12, \"Tomas Barton Benchmark\"),\n",
-    "            (\"Synth_high\", 6, \"High-dimensional\"),\n",
-    "        ],\n",
+    "        # \"categories\": [\n",
+    "        #     (\"htru2\", 3, \"Tabular data\"),\n",
+    "        #     # (\"cmu_faces\", 6, \"Image data\"),\n",
+    "        #     (\"smile1\", 12, \"Tomas Barton Benchmark\"),\n",
+    "        #     (\"Synth_high\", 6, \"High-dimensional\"),\n",
+    "        # ],\n",
     "        \"latex_coloring_axis\": 0,\n",
     "        \"latex_coloring_selection\": None,\n",
     "    },\n",
@@ -371,15 +371,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated: `latex/density_standardized_clusterings.tex`\n",
       "Generated: `latex/density_standardized_clusterings_ari.tex`\n",
+      "Generated: `latex/density_standardized_clusterings.tex`\n",
       "Generated: `latex/all_experiments_standardized.tex`\n"
      ]
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -425,38 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "html"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\\renewcommand{\\arraystretch}{1.2}\n",
-    "\n",
-    "\\begin{table}\n",
-    "\\centering\n",
-    "\\caption{ARI values on different Clusterings}\n",
-    "\\resizebox{1\\linewidth}{!}{\n",
-    "\\begin{tabular}{l|cccccccc}\n",
-    "\\toprule\n",
-    "\\textbf{Dataset} & \\parbox[c]{2mm}{\\rotatebox[origin=c]{70}{GT}} & \\parbox[c]{2mm}{\\rotatebox[origin=c]{70}{DBSCAN}} &\n",
-    "\\parbox[c]{2mm}{\\rotatebox[origin=c]{70}{HDBSCAN}} & \\parbox[c]{2mm}{\\rotatebox[origin=c]{70}{DPC}} &\n",
-    "\\parbox[c]{2mm}{\\rotatebox[origin=c]{70}{SC}} & \\parbox[c]{2mm}{\\rotatebox[origin=c]{70}{Aggl.}} &\n",
-    "\\parbox[c]{2mm}{\\rotatebox[origin=c]{70}{MeanShift}} & \\parbox[c]{2mm}{\\rotatebox[origin=c]{70}{KMeans}} \\\\"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,23 +453,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7\n",
-      "[ nan 0.47 0.28 0.67 0.6  0.75 0.96 0.71]\n",
-      "[ 1.   -0.12  0.98  0.91  0.41  0.59  0.92  0.95  0.88]\n"
+      "0.69\n",
+      "[ nan 0.48 0.25 0.61 0.6  0.75 0.96 0.71]\n",
+      "[ 1.   -0.13  0.98  0.89  0.35  0.6   0.92  0.95  0.88]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_861661/3885098068.py:5: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
+      "/tmp/ipykernel_3176837/3885098068.py:5: ConstantInputWarning: An input array is constant; the correlation coefficient is not defined.\n",
       "  print(np.round(np.array(list(pearsonr(df1.to_numpy(), df2.to_numpy(), axis=0))[0]), 2))\n"
      ]
     }
@@ -692,7 +661,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "[ 1.   -0.13  0.98  0.89  0.35  0.6   0.92  0.95  0.88]"
+   ]
   }
  ],
  "metadata": {
@@ -700,6 +671,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
